[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "esi-controls"
version = "0.0.1"
authors = [
  { name="Josh Taylor", email="joshotaylor@gmail.com" },
]
description = "Python API client to the ESI Controls API for monitoring and controlling your thermostat."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/josh-taylor/esi"
"Bug Tracker" = "https://github.com/josh-taylor/esi/issues"